Fix overflow

--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -80,5 +80,5 @@
 .panelContainer {
   width: 100%;
   overflow-y: auto;
-  overflow: hidden;
+  overflow-x: hidden;
 }
